--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "scripts": {
+  "name": "B7-1-Testad-Wordle-algoritm",
+  "version": "1.0.0",
+  "description": "",
+  "main": "wordle.js",
+  "type": "module",
+ "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --collect-coverage",
     "test:watch": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
